# quanta

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/workflows/: publish.yml
2024.10/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
2024.10.1/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
2024.10.1/blog/: index.html
2024.10.1/framework/: index.html
2024.10.1/get-started/: index.html
2024.10.1/reference/: index.html
2024.10.1/tutorials/: index.html
2024.10/blog/: index.html
2024.10/framework/: index.html
2024.10/get-started/: index.html
2024.10/reference/: index.html
2024.10/search/: search_index.json
2024.10/tutorials/: index.html
2024.11/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
2024.11/blog/: index.html
2024.11/framework/: index.html
2024.11/get-started/: index.html
2024.11/reference/: index.html
2024.11/search/: search_index.json
2024.11/tutorials/: index.html
develop/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
develop/blog/: index.html
develop/framework/: index.html
develop/get-started/: index.html
docs/: index.md
overrides/: home.html  main.html
qnta/: qnta.py
quanta/: qnta.py  quanta.py
scripts/: deploy.sh  dev.sh
(+239 files in other folders)
