[tool.poetry]
name = "quanta"
version = "0.0.1"
description = "Σ in innovation, harmony in finance"
authors = ["CtrlX <gitctrlx@gmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
mkdocs-rss-plugin = "^1.16.0"
mkdocs-git-committers-plugin-2 = "^2.4.1"
pymdown-extensions = "^10.12"
mkdocs-minify-plugin = "^0.8.0"
mike = "^2.1.3"
typer = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
